# FlowDesk

./: .gitignore  AGENTS.md  README.md  generate_icon.py  index.html  package-lock.json  package.json  product.md  release-agent-方案B-文档摘要.md  vite.config.js
app-skills/release-flow/: SKILL.md
docs/plans/: 2026-02-03-rss-curated-tab-design.md  2026-04-07-architecture-refactor-roadmap.md  2026-04-07-release-agent-design.md  2026-04-08-agent-p0-hardening-implementation.md  2026-04-14-agent-execution-chain-design.md  2026-04-16-agent-perception-system-implementation-plan.md  2026-04-23-agent-coding-workflow-implementation-plan.md  2026-04-23-agent-core-graph-implementation-plan.md  2026-04-23-agent-explicit-role-graph-plan.md  2026-04-23-agent-presentation-observability-implementation-plan.md
skills/agent-design-guide/: SKILL.md
skills/api-debugging/: SKILL.md
skills/frontend-aesthetics/: SKILL.md
src/: App.vue  config.js  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: agent.rs  ai.rs  git.rs  github.rs  http.rs  jira.rs  mod.rs  release.rs  sidecar.rs
src/__tests__/: App.test.js  config.test.js
src/agent/: context.js  customization.js  graph.js  index.js  loop.js  memory.js  prompt-config.js  router.js  runtime.js  skills.js  tracing.js
src/ai/: client.js
src/components/: ThemeSwitcher.vue
src/services/: ai-service.js  release-tools.js
src/stores/: github.js  jira.js  prompt.js  release.js  settings.js  tools.js
(+86 files in other folders)
